welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:18: error: not found: value ramase
    ramase();
    ^