welcome.lessons.welcome.summative.Moria.scala.code
def ramasse() {
  retourne()
  while(!estSurBiscuit){
    avance();
  }
  prendBiscuit();
  retourne();
  while(!estSurBiscuit){
    avance();
  }
  recule();
  poseBiscuit()
}


def moria() {
  while (!estFaceMur){
    ramase();
  }
  if (estSurBiscuit){
    retourne();
  	while(!estSurBiscuit){
    	avance();
  	}
  	recule();
  	poseBiscuit()
  	retourne();
		while(!estFaceMur){
      avance();
    }  
  }
  droite();
  avance();
  gauche();
  avance();
}